rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_crate_root.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: fixture_crate

A minimal test crate for rustdoc JSON testing


Modules:
link_resolution_tests // Module for testing intra-doc link resolution
markdown_test // # Markdown: Syntax [+332 more lines]
namespace_collisions // Module for testing namespace disambiguation with kind discriminators. [+3 more lines]
prefix_tests // Edge cases for path-prefix resolution in use-item sources and intra-doc links. [+11 more lines]
private_detail // Private module whose items are accessible only via re-export. [+5 more lines]
reexport_mod
submodule // A module with items

Structs:
GenericStruct // A generic struct for testing multi-paragraph documentation. [+14 more lines]
NotThreadSafe // A type that is not thread-safe, to exercise negative auto-trait impls [+1 more lines]
ReachableViaPrivateModule // A struct accessible only via re-export from a private module.
SubStruct // A struct in a submodule
TestStruct // A simple struct for testing basic functionality. [+6 more lines]
TupleStruct // A tuple struct for testing
UnitStruct // A unit struct for testing
Vec // A contiguous growable array type, written as `Vec<T>`, short for 'vector'. [+257 more lines]

Enums:
GenericEnum // A generic enum for testing [+2 more lines]
TestEnum // An enum for testing [+2 more lines]

Traits:
ComplexTrait // A more complex trait demonstrating various features
TestTrait // A trait for testing extremely long documentation that exceeds line limits. [+22 more lines]

Unions:
TestUnion // A union for testing union formatting. [+3 more lines]

Functions:
async_function // An async function
generic_function // A generic function
private_function // A private function
sub_function // A function in a submodule
test_function // A public function

Constants:
TEST_CONSTANT // A const for testing

Statics:
TEST_STATIC // A static for testing

Variants:
VariantA // Variant A (see also [`crate::GenericEnum`])
VariantB // Variant B with data
VariantC // Variant C with struct data (`name` and `value`)
