rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_enum_details.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: TestEnum
Kind: Enum
Visibility: Public
Defined at: fixture_crate::submodule::TestEnum

An enum for testing

This is like [`crate::GenericEnum`] but without the generic


```rust
enum TestEnum {
    /// Variant A (see also [`crate::GenericEnum`])
    VariantA,
    /// Variant B with data
    VariantB(String),
    /// Variant C with struct data (`name` and `value`)
    VariantC {
        name: String,
        value: i32,
    },
}
```

Trait Implementations:
core::any::Any, core::borrow::Borrow, core::borrow::BorrowMut, core::convert::From, core::convert::Into, core::convert::TryFrom, core::convert::TryInto, core::marker::Freeze, core::marker::Send, core::marker::Sync, core::marker::Unpin, core::marker::UnsafeUnpin, core::panic::unwind_safe::RefUnwindSafe, core::panic::unwind_safe::UnwindSafe
