rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_generic_enum.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: GenericEnum
Kind: Enum
Visibility: Public
Defined at: fixture_crate::GenericEnum

A generic enum for testing

See also [`crate::TestEnum`]


```rust
enum GenericEnum<T, U = String>
where
    T: Clone + Send,
    U: std::fmt::Display {
    /// Simple variant
    Simple,
    /// Variant with generic data
    WithData(T),
    /// Variant with mixed generics
    Mixed {
        data: T,
        info: U,
    },
}
```

Trait Implementations:
core::any::Any, core::borrow::Borrow, core::borrow::BorrowMut, core::convert::From, core::convert::Into, core::convert::TryFrom, core::convert::TryInto, core::marker::Freeze, core::marker::Send, core::marker::Sync, core::marker::Unpin, core::marker::UnsafeUnpin, core::panic::unwind_safe::RefUnwindSafe, core::panic::unwind_safe::UnwindSafe
