rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_generic_struct.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: GenericStruct
Kind: Struct
Visibility: Public
Defined at: fixture_crate::GenericStruct

A generic struct for testing multi-paragraph documentation.

This struct demonstrates how generics work with complex type bounds
and provides a comprehensive example of the generic system in Rust.
[+11 lines elided]


```rust
struct GenericStruct<T, U = String>
where
    T: Clone + Send,
    U: std::fmt::Display {
    pub data: T,
    pub metadata: U,
    inner: Vec<T>,
    secret: String,
}
```

Fields:

• data: T
    Generic field

• metadata: U
    Generic field with default

• inner: Vec<T>
    Private generic field  

• secret: String
    Another private field


std traits: Any, Borrow<T>, BorrowMut<T>, Freeze, From<T>, Into<U>, RefUnwindSafe, Send, Sync, TryFrom<U> [+4 more]
